Update styles.css, add avoid break inside for columns

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -234,6 +234,10 @@ a.nav-item:hover * {
 	margin-top: 0;
 }
 
+.column-2 * {
+	break-inside: avoid;
+}
+
 .bg-brown {
 	background-color: var(--brown);
 }
